<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_title">Shoe Store Inventory</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_account">No Account? Create one</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="fragment_login_title">Login</string>
    <string name="fragment_welcome_title">Welcome</string>
    <string name="fragment_instructions_title">Instructions</string>
    <string name="welcome_title">Hello!</string>
    <string name="welcome_message">Welcome to the only app you need to organize your shoes!</string>
    <string name="btn_welcome_continue">Continue</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_message">On the main screen you see all your shoes.\n\nTo add a new pair of shoes press add.</string>
    <string name="btn_start">Start</string>
    <string name="menu_logout">Logout</string>
    <string name="fragment_details_title">Add Shoe</string>
    <string name="fragment_overview_title">Overview</string>
    <string name="add_button_description">Add Shoe</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="shoe_description">Description</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="item_name">Name: %1$s</string>
    <string name="item_description">Description: %1$s</string>
    <string name="item_size">Size: %1$s</string>
    <string name="item_company">Company: %1$s</string>
</resources>
