<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.viewmodels.WelcomeViewModel" />

    </data>

    <!--ConstraintLayout is used to enable chains.
     The button should always be spread to bottom
     regardless of the screen size-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/Text.Huge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_huge"
            android:text="@string/welcome_title"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMessage"
            style="@style/Text.Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_huge"
            android:textAlignment="center"
            android:text="@string/welcome_message"
            app:layout_constraintBottom_toTopOf="@+id/btnToInstructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Button
            android:id="@+id/btnToInstructions"
            style="@style/PrimaryColoredButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_huge"
            android:text="@string/btn_welcome_continue"
            android:onClick="@{() -> welcomeViewModel.onToInstructions()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>